<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey17"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btnPolice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:background="@drawable/main_btns"
        android:drawableLeft="@drawable/video"
        android:drawablePadding="10dp"
        android:gravity="left|center_vertical"
        android:height="60dp"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingTop="8dp"
        android:text="@string/video_fines"
        android:textColor="@color/dodgerblue1"
        android:textSize="17dp" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="5dp"
        android:visibility="visible" >

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txtDocNo"
                android:layout_width="136dp"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:paddingLeft="3dp"
                android:text="@string/docNumber"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/docNo"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_marginRight="3dp"
                android:background="@drawable/tbselector"
                android:drawableLeft="@drawable/techpassnum"
                android:drawablePadding="5dp"
                android:ems="10"
                android:maxLength="9"
                android:textColor="@color/black"
                android:textSize="23sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="3dp"
            android:paddingRight="3dp"
            android:paddingTop="3dp" >

            <TextView
                android:id="@+id/vehicNo2"
                android:layout_width="136dp"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:paddingLeft="3dp"
                android:text="@string/my_plate_number"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/vehicleNum"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/tbselector"
                android:drawableLeft="@drawable/geonum"
                android:drawablePadding="5dp"
                android:paddingRight="5dp"
                android:textColor="@color/black"
                android:textSize="25dp" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <Button
            android:id="@+id/btnSearchPO"
            android:layout_width="108dp"
            android:layout_height="45dp"
            android:layout_gravity="right"
            android:layout_marginRight="3dp"
            android:background="@drawable/custom_search_button"
            android:text="@string/search" />

    </LinearLayout>

    <Button
        android:id="@+id/btnCtpark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_btns"
        android:drawableLeft="@drawable/parking"
        android:drawablePadding="10dp"
        android:freezesText="true"
        android:gravity="left|center_vertical"
        android:height="60dp"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingTop="8dp"
        android:text="@string/parking_fines"
        android:textColor="@color/dodgerblue1"
        android:textSize="17dp" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:paddingTop="5dp"
        android:visibility="visible" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="3dp"
            android:paddingTop="3dp" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="136dp"
                android:layout_height="fill_parent"
                android:text="@string/my_plate_number" 
                android:gravity="center"/>

            <EditText
                android:id="@+id/plateNumCT"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tbselector"
                android:drawableLeft="@drawable/geonum"
                android:drawablePadding="5dp"
                android:ems="10"
                android:height="35dp"
                android:textColor="@color/black"
                android:textSize="25dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="3dp" >

            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tickets" />

            <Button
                android:id="@+id/btnSearchCT"
                android:layout_width="108dp"
                android:layout_height="45dp"
                android:background="@drawable/custom_search_button"
                android:text="@string/search" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>