<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey17">

    <Button
        android:id="@+id/btnPolice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_btns"
        android:drawableLeft="@drawable/video"
        android:drawablePadding="10dp"
        android:gravity="left|center_vertical"
        android:height="60dp"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingTop="8dp"
        android:text="@string/video_fines"
        android:textColor="@color/dodgerblue1"
        android:textSize="17dp" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="5dp"
        android:visibility="gone" >

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/relativeLayout3"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:paddingRight="3dp" >

                <TextView
                    android:id="@+id/txtDocNo"
                    android:layout_width="122dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_toLeftOf="@+id/docNo"
                    android:paddingLeft="3dp"
                    android:text="@string/docNumber"
                    android:textSize="15dp" />

                <EditText
                    android:id="@+id/docNo"
                    android:layout_width="182dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/tbselector"
                    android:drawableLeft="@drawable/techpassnum"
                    android:drawablePadding="5dp"
                    android:height="35dp"
                    android:maxLength="9"
                    android:paddingRight="5dp"
                    android:textColor="@color/black"
                    android:textSize="23dp" />

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" android:paddingRight="3dp">

            <RelativeLayout
                android:id="@+id/relativeLayout4"
                android:layout_width="fill_parent"
                android:layout_height="40dp" >

                <TextView
                    android:id="@+id/vehicNo2"
                    android:layout_width="122dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_toLeftOf="@+id/vehicleNum"
                    android:paddingLeft="3dp"
                    android:text="@string/my_plate_number"
                    android:textSize="15dp" />

                <EditText
                    android:id="@+id/vehicleNum"
                    android:layout_width="182dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/tbselector"
                    android:drawableLeft="@drawable/geonum"
                    android:drawablePadding="5dp"
                    android:height="35dp"
                    android:paddingRight="5dp"
                    android:textColor="@color/black"
                    android:textSize="25dp" />

            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btnSearchPO"
                android:layout_width="87dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/search" android:background="@drawable/custom_search_button"/>
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnCtpark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_btns"
        android:drawableLeft="@drawable/parking"
        android:drawablePadding="10dp"
        android:freezesText="true"
        android:gravity="left|center_vertical"
        android:height="60dp"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingTop="8dp"
        android:text="@string/parking_fines"
        android:textColor="@color/dodgerblue1"
        android:textSize="17dp" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="293dp"
        android:orientation="vertical"
        android:paddingTop="5dp"
        android:visibility="gone" >

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_weight="953.91"
            android:background="@drawable/carbg"
            android:paddingRight="3dp" >

            <EditText
                android:id="@+id/plateNumCT"
                android:layout_width="182dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="66dp"
                android:background="@drawable/tbselector"
                android:drawableLeft="@drawable/geonum"
                android:drawablePadding="5dp"
                android:height="35dp"
                android:textColor="@color/black"
                android:textSize="25dp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btnSearchCT"
                android:layout_width="87dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/custom_search_button"
                android:text="@string/search" />

            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/btnSearchCT"
                android:layout_alignParentLeft="true"
                android:text="@string/tickets" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>